# factorystatsd-magic-postgres-forwarder

./: Dockerfile  README.md  docker-compose.yaml  factorystatsd-game-data.json  factorystatsd-samples.json  mock-factory.py  mockfactory.Dockerfile  pyproject.toml
pg_magic/: __init__.py  __main__.py  incoming.py  pg_conn.py  pg_data.py  pg_schema.py
